Added tofi launcher

--- a/user/.config/hypr/hyprland.conf
+++ b/user/.config/hypr/hyprland.conf
@@ -2,10 +2,13 @@ source = ~/.config/hypr/desktop.conf
 
 exec-once = sleep 0.1 && hyprpm reload
 exec-once = sleep 0.2 && waybar & swww-daemon & dunst
-exec-once = wl-paste --type text --watch cliphist store 
-exec-once = wl-paste --type image --watch cliphist store
+
 exec-once = hyprctl setcursor catppuccin-mocha-rosewater 28
 
+exec-once = wl-paste --type text --watch cliphist store 
+exec-once = wl-paste --type image --watch cliphist store
+
+exec-once = walker --gapplication-service
 exec-once=systemctl --user start plasma-polkit-agent
 
 $terminal = alacritty
