--- a/user/.config/hypr/binds.conf
+++ b/user/.config/hypr/binds.conf
@@ -1,6 +1,6 @@
 $mainMod = SUPER
 
-bind = SUPER, V, exec, cliphist list | wofi --dmenu | cliphist decode | wl-copy
+# bind = SUPER, V, exec, cliphist list | tofi | cliphist decode | wl-copy
 
 bind = ,code:123,exec,pactl set-sink-volume @DEFAULT_SINK@ +1000
 bind = ,code:122,exec,pactl set-sink-volume @DEFAULT_SINK@ -1000
@@ -20,7 +20,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, BACKSLASH, exec, $browser
 bind = $mainMod, i, exec, $passwordmgr
 bind = $mainMod, SPACE, togglefloating, 
-bind = $mainMod, P, exec, pidof wofi || wofi --insensitive
+bind = $mainMod, P, exec, tofi-run
 
 bind = $mainMod, n, exec, hyprpicker -a
 
