Actually run the result from tofi

--- a/user/.config/hypr/binds.conf
+++ b/user/.config/hypr/binds.conf
@@ -20,7 +20,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, BACKSLASH, exec, $browser
 bind = $mainMod, i, exec, $passwordmgr
 bind = $mainMod, SPACE, togglefloating, 
-bind = $mainMod, P, exec, tofi-run
+bind = $mainMod, P, exec, $(tofi-run)
 
 bind = $mainMod, n, exec, hyprpicker -a
 
