updated hypr, waybar, alacritty

--- a/user/.config/hypr/behaviour.conf
+++ b/user/.config/hypr/behaviour.conf
@@ -5,28 +5,21 @@ general {
     no_border_on_floating = false
     
     gaps_in = 5
-    gaps_out = 10
+    gaps_out = 5
     gaps_workspaces = 15
 
+    # cursor_inactive_timeout = 15
 
-    # layout = master
+    layout = dwindle
+    # no_cursor_warps = true
     no_focus_fallback = true
     resize_on_border = true
     extend_border_grab_area = 15
 }
 
-cursor {
-    no_warps = false
-    inactive_timeout = 15
-}
-
 input {
-    kb_model = pc105
     kb_layout = us,ru
-    kb_variant = qwerty
     kb_options = grp:alt_shift_toggle
-    kb_rules =
-    numlock_by_default = 1
 
     sensitivity = -0.1
     follow_mouse = 1
@@ -62,7 +55,7 @@ misc {
     force_default_wallpaper = 0
 
     vfr = true
-    vrr = 1
+    vrr = 0
 
     mouse_move_enables_dpms = false
     key_press_enables_dpms = false
@@ -72,9 +65,9 @@ misc {
     animate_manual_resizes = true
     animate_mouse_windowdragging = true
 
-    enable_swallow = true
-    swallow_regex = 
-    swallow_exception_regex = 
+    enable_swallow = false
+    swallow_regex = ^(a|A)lacritty$
+    swallow_exception_regex = ^IDA
 
     focus_on_activate = false
 
@@ -87,7 +80,3 @@ misc {
 xwayland {
     force_zero_scaling = true
 }
-
-# master {
-#     new_is_master = false
-# }
