--- a/user/.config/hypr/hyprland.conf
+++ b/user/.config/hypr/hyprland.conf
@@ -1,37 +1,24 @@
-source = ~/.config/hypr/desktop.conf
-
-exec-once = sleep 0.1 && hyprpm reload
-exec-once = sleep 0.2 && waybar & swww-daemon & dunst
-
-exec-once = hyprctl setcursor catppuccin-mocha-rosewater 28
+exec-once = waybar & swww-daemon & hyprlock
 
 exec-once = wl-paste --type text --watch cliphist store 
 exec-once = wl-paste --type image --watch cliphist store
 
-exec-once = walker --gapplication-service
-exec-once=systemctl --user start plasma-polkit-agent
+exec-once = /usr/lib/polkit-kde-authentication-agent-1
+
+exec-once = xrdb -merge ~/.Xresources
 
 $terminal = alacritty
 $fileManager = pcmanfm
-$browser = librewolf
-$passwordmgr = keepassxc
+$browser = zen-browser
 
-env = XCURSOR_SIZE,28
+env = XCURSOR_SIZE,24
 env = GDK_SCALE,2
 env = QT_QPA_PLATFORMTHEME,qt5ct
-env = XDG_SESSION_TYPE,wayland
-env = MOZ_ENABLE_WAYLAND,1
-# env = QT_AUTO_SCREEN_SCALE_FACTOR=1
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,Hyprland
-env = XDG_SESSION_DESKTOP,Hyprland
-env = GDK_BACKEND=wayland
-
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+env = TERMINAL,alacritty
 
 source = ~/.config/hypr/decorations.conf
 source = ~/.config/hypr/binds.conf
 source = ~/.config/hypr/behaviour.conf
 source = ~/.config/hypr/colors.conf
-
-# debug:disable_logs = false
-
+source = ~/.config/hypr/zenbook.conf
