--- a/user/.config/alacritty/alacritty.toml
+++ b/user/.config/alacritty/alacritty.toml
@@ -19,11 +19,10 @@ white = "#787c99"
 yellow = "#e0af68"
 
 [colors.primary]
-background = "#1a1b26"
 foreground = "#a9b1d6"
 
 [font]
-size = 11
+size = 10
 
 [font.italic]
 family = "CaskaydiaCove Nerd Font"
@@ -33,7 +32,7 @@ style = "Italic"
 family = "CaskaydiaCove Nerd Font"
 style = "Normal"
 
-[shell]
+[terminal.shell]
 program = "/bin/zsh"
 
 [window]
@@ -43,3 +42,5 @@ opacity = 0.5
 [window.padding]
 x = 10
 y = 10
+
+[terminal]
