--- a/user/.config/hypr/decorations.conf
+++ b/user/.config/hypr/decorations.conf
@@ -1,11 +1,11 @@
 decoration {
     rounding = 11
 
-    drop_shadow = yes
-    shadow_range = 6
-    shadow_render_power = 2
-
-    col.shadow = rgba(1a1a1aee)
+    # drop_shadow = yes
+    # shadow_range = 6
+    # shadow_render_power = 2
+    #
+    # col.shadow = rgba(1a1a1aee)
 
     dim_inactive = true
     dim_strength = 0.08
@@ -22,13 +22,13 @@ decoration {
         vibrancy = 0.76
         vibrancy_darkness = 0.16
         popups = false
-	layerrule = blur,waybar
+	layerrule = unset, top
 	# layerrule = blur,wofi
     }
 }
 
 animations {
-    enabled = yes
+    enabled = no
     first_launch_animation = false
 
     bezier = overshot, 0.05, 0.9, 0.1, 1.05
