--- a/user/.config/waybar/config.jsonc
+++ b/user/.config/waybar/config.jsonc
@@ -1,10 +1,10 @@
 {
-    // "output": [
-    //     "eDP-1"
-    // ],
+    "output": [
+        "eDP-1"
+    ],
     "layer": "top",
     // Using margin-bottom with a negative value in order to reduce the space between Hyprland window and waybar
-    "margin-top": 5,
+    "margin-top": 3,
     "modules-left": [
         "hyprland/workspaces"
     ],
@@ -24,19 +24,19 @@
         "format": "{short}"
     },
     "hyprland/workspaces": {
-        // "persistent-workspaces": {
-        //     "eDP-1": [
-        //         1,
-        //         2,
-        //         3,
-        //         4,
-        //         5,
-        //         6,
-        //         7,
-        //         8,
-        //         9
-        //     ]
-        // },
+        "persistent-workspaces": {
+            "eDP-1": [
+                1,
+                2,
+                3,
+                4,
+                5,
+                6,
+                7,
+                8,
+                9
+            ]
+        },
     },
     "pulseaudio": {
         "tooltip": false,
